RESOLVED FIXED137777
Missing RefPtr.release() calls in TextureMapper
https://bugs.webkit.org/show_bug.cgi?id=137777
Summary Missing RefPtr.release() calls in TextureMapper
Adrien Destugues
Reported 2014-10-16 06:06:13 PDT
Missing RefPtr.release() calls in TextureMapper
Attachments
Patch (2.52 KB, patch)
2014-10-16 06:07 PDT, Adrien Destugues
no flags
Adrien Destugues
Comment 1 2014-10-16 06:07:46 PDT
Chris Dumez
Comment 2 2014-10-16 13:27:34 PDT
Comment on attachment 239946 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-10-16 18:12:52 PDT
Comment on attachment 239946 [details] Patch Clearing flags on attachment: 239946 Committed r174802: <http://trac.webkit.org/changeset/174802>
WebKit Commit Bot
Comment 4 2014-10-16 18:12:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.