Missing RefPtr.release() calls in TextureMapper https://bugs.webkit.org/show_bug.cgi?id=137777

Patch by Adrien Destugues <pulkomandy@gmail.com> on 2014-10-16
Reviewed by Chris Dumez.

No new tests: no functional change, cleanup/optimization.

Avoids useless ref/deref cycle when returning from functions.

* platform/graphics/texmap/TextureMapper.cpp:
(WebCore::TextureMapper::acquireTextureFromPool):
* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::paintIntoSurface):

Canonical link: https://commits.webkit.org/155661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174802 268f45cc-cd09-0410-ab3c-d52691b4dbfc